syntax = "proto3";

package org.example.FoodContainer;
option java_multiple_files =  true;
option java_package = "org.example.foodcontainer.foodstorageservice";
option java_outer_classname = "FoodStorageServiceProto";


service FoodStorageService {

  // Unary
  rpc fruitStorage(FoodStorageServiceRequest) returns (FoodStorageServiceResponse);

  // Server-side streaming RPC
  rpc streamFoodEmptySpaceUpdateRequest(StreamFoodEmptySpaceUpdateRequest) returns (stream StreamFoodEmptySpaceUpdateResponse);

  rpc streamClientFruitTypeOrderRequest(stream StreamClientFruitTypeOrderRequest) returns ( StreamClientFruitTypeOrderResponse );

  rpc biDirectionalFruitTypeOrderRequest(stream StreamClientFruitTypeOrderRequest) returns (stream StreamClientFruitTypeOrderResponse );

}

message FoodStorageServiceRequest {
  string fruit = 1;

}

message FoodStorageServiceResponse {
  string result = 1;
}


message StreamFoodEmptySpaceUpdateRequest {
  string spaceQuery= 1;
}

message StreamFoodEmptySpaceUpdateResponse {
  string spaceUpdate= 1;
}

message StreamClientFruitTypeOrderRequest {
  string fruitType = 1;
}

message StreamClientFruitTypeOrderResponse {
  string result2 = 1;
}

